--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,19 +25,99 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>JacKie_Shao的技术博客</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <style>
+        .empty_loading {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%)
+        }
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+        /* 上拉加载 */
+        .load_more_box {
+            height: 40px;
+            line-height: 40px;
+            position: relative;
+            text-align: center;
+        }
+
+        .load_more_box span {
+            width: 5px;
+            height: 5px;
+            margin: 0 1px;
+            display: inline-block;
+            vertical-align: middle;
+            background: #9b59b6;
+            animation: load_more_box 1.5s infinite ease-in-out;
+        }
+
+        .load_more_box span:nth-child(2) {
+            animation-delay: .2s;
+        }
+
+        .load_more_box span:nth-child(3) {
+            animation-delay: .4s;
+        }
+
+        .load_more_box span:nth-child(4) {
+            animation-delay: .6s;
+        }
+
+        .load_more_box span:nth-child(5) {
+            animation-delay: .8s;
+        }
+
+        @keyframes load_more_box {
+            0% {
+                height: 5px;
+                background: #9b59b6;
+            }
+            25% {
+                height: 30px;
+                background: #0081ff;
+            }
+            50% {
+                height: 5px;
+                background: #9b59b6;
+            }
+            100% {
+                height: 5px;
+                background: #9b59b6;
+            }
+        }
+
+        .load_text {
+            margin-top: 10px;
+            font-size: .267rem;
+            color: #428cf6
+        }
+    </style>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root">
+    <div class="empty_loading">
+        <div class="load_more_box">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="load_text">Loading···</div>
+    </div>
+</div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
+
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
+
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
